test/test-files/analyzer/arrays/array-index-not-type-int/exception.out
Semantic error in : ./test-files/analyzer/arrays/array-index-not-type-int/source.spice:3:30:
Array index not of type int or long: Array index must be of type int or long

f("Array item: %d", longArray[1s]);
                    ^^^^^^^^^^^^^